# jax-extract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jax_extract/: __init__.py  cli.py
src/jax_extract/extraction/: __init__.py  base.py  extractor.py  field_solver.py  geometry.py  network.py  resistance.py
src/jax_extract/io/: __init__.py
src/jax_extract/iteration/: __init__.py
src/jax_extract/pdk/: __init__.py  adapter.py  corners.py
src/jax_extract/simulation/: __init__.py  jax_spice.py  spice_netlist.py
src/jax_extract/testgen/: __init__.py
src/jax_extract/validation/: __init__.py
tests/: __init__.py  conftest.py
tests/analytical/: __init__.py  test_capacitance.py  test_resistance.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  conftest.py  test_extraction_confidence.py
tests/reference/: __init__.py
tests/unit/: __init__.py  test_corners.py  test_geometry.py  test_network.py  test_pdk_adapter.py  test_simulation.py
